# claude-usage

./: .gitignore  LICENSE  README.md  anomaly.py  api_server.py  archiver.py  circuit_breaker.py  cli.py  config.py  daemon.py  dashboard.py  hooks.py  insights.py  invoice.py  mcp_server.py  optimizer.py  plugins.py  pyproject.toml  query_engine.py  scanner.py  sync.py  tui.py  updater.py
.github/workflows/: release.yml
claude_usage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/startup/: claude-usage-daemon.service  com.claude.usage.daemon.plist  linux-install-systemd.sh  macos-install-launchd.sh  windows-install-task.bat
tests/: conftest.py  test_anomaly.py  test_config.py  test_query_engine.py  test_scanner.py
